syntax = "proto3";

package bytebase.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "v1/annotation.proto";
import "v1/common.proto";
import "v1/iam_policy.proto";

option go_package = "github.com/bytebase/bytebase/backend/generated-go/v1";

// ProjectService manages projects that group databases and changes.
service ProjectService {
  // GetProject retrieves a project by name.
  // Users with "bb.projects.get" permission on the workspace or the project owner can access this method.
  // Permissions required: bb.projects.get
  rpc GetProject(GetProjectRequest) returns (Project) {
    option (google.api.http) = {get: "/v1/{name=projects/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.projects.get";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Lists all projects in the workspace with optional filtering.
  // Permissions required: bb.projects.list
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {
    option (google.api.http) = {get: "/v1/projects"};
    option (google.api.method_signature) = "";
    option (bytebase.v1.permission) = "bb.projects.list";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Searches for projects with advanced filtering capabilities.
  // Permissions required: bb.projects.get (or project-level bb.projects.get for specific projects)
  rpc SearchProjects(SearchProjectsRequest) returns (SearchProjectsResponse) {
    option (google.api.http) = {
      post: "/v1/projects:search"
      body: "*"
    };
    option (google.api.method_signature) = "";
    option (bytebase.v1.auth_method) = CUSTOM;
    // TODO(d): secure it.
  }

  // Creates a new project in the workspace.
  // Permissions required: bb.projects.create
  rpc CreateProject(CreateProjectRequest) returns (Project) {
    option (google.api.http) = {
      post: "/v1/projects"
      body: "project"
    };
    option (google.api.method_signature) = "";
    option (bytebase.v1.permission) = "bb.projects.create";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Updates an existing project's properties.
  // Permissions required: bb.projects.update
  rpc UpdateProject(UpdateProjectRequest) returns (Project) {
    option (google.api.http) = {
      patch: "/v1/{project.name=projects/*}"
      body: "project"
    };
    option (google.api.method_signature) = "project,update_mask";
    option (bytebase.v1.permission) = "bb.projects.update";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Deletes (soft-delete or purge) a project.
  // Permissions required: bb.projects.delete
  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/{name=projects/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.projects.delete";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Restores a soft-deleted project.
  // Permissions required: bb.projects.undelete
  rpc UndeleteProject(UndeleteProjectRequest) returns (Project) {
    option (google.api.http) = {
      post: "/v1/{name=projects/*}:undelete"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.projects.undelete";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Deletes multiple projects in a single operation.
  // Permissions required: bb.projects.delete
  rpc BatchDeleteProjects(BatchDeleteProjectsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/projects:batchDelete"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.projects.delete";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Retrieves the IAM policy for a project.
  // Permissions required: bb.projects.getIamPolicy
  rpc GetIamPolicy(GetIamPolicyRequest) returns (IamPolicy) {
    option (google.api.http) = {get: "/v1/{resource=projects/*}:getIamPolicy"};
    option (bytebase.v1.permission) = "bb.projects.getIamPolicy";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Deprecated. No permission check implemented.
  // Permissions required: None
  rpc BatchGetIamPolicy(BatchGetIamPolicyRequest) returns (BatchGetIamPolicyResponse) {
    option (google.api.http) = {get: "/v1/{scope=*/*}/iamPolicies:batchGet"};
    option (bytebase.v1.permission) = "bb.projects.getIamPolicy";
    option (bytebase.v1.auth_method) = CUSTOM;
  }

  // Sets the IAM policy for a project.
  // Permissions required: bb.projects.setIamPolicy
  rpc SetIamPolicy(SetIamPolicyRequest) returns (IamPolicy) {
    option (google.api.http) = {
      post: "/v1/{resource=projects/*}:setIamPolicy"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.projects.setIamPolicy";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Adds a webhook to a project for notifications.
  // Permissions required: bb.projects.update
  rpc AddWebhook(AddWebhookRequest) returns (Project) {
    option (google.api.http) = {
      post: "/v1/{project=projects/*}:addWebhook"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.projects.update";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Updates an existing webhook configuration.
  // Permissions required: bb.projects.update
  rpc UpdateWebhook(UpdateWebhookRequest) returns (Project) {
    option (google.api.http) = {
      patch: "/v1/{webhook.name=projects/*/webhooks/*}:updateWebhook"
      body: "webhook"
    };
    option (google.api.method_signature) = "webhook,update_mask";
    option (bytebase.v1.permission) = "bb.projects.update";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Removes a webhook from a project.
  // Permissions required: bb.projects.update
  rpc RemoveWebhook(RemoveWebhookRequest) returns (Project) {
    option (google.api.http) = {
      post: "/v1/{webhook.name=projects/*/webhooks/*}:removeWebhook"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.projects.update";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Tests a webhook by sending a test notification.
  // Permissions required: bb.projects.update
  rpc TestWebhook(TestWebhookRequest) returns (TestWebhookResponse) {
    option (google.api.http) = {
      post: "/v1/{project=projects/*}:testWebhook"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.projects.update";
    option (bytebase.v1.auth_method) = IAM;
  }
}

message GetProjectRequest {
  // The name of the project to retrieve.
  // Format: projects/{project}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];
}

message ListProjectsRequest {
  // The maximum number of projects to return. The service may return fewer than
  // this value.
  // If unspecified, at most 10 projects will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 1;

  // A page token, received from a previous `ListProjects` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `ListProjects` must match
  // the call that provided the page token.
  string page_token = 2;

  // Show deleted projects if specified.
  bool show_deleted = 3;

  // Filter the project.
  // Check filter for SearchProjectsRequest for details.
  // Supports filtering by name, resource_id, state, and labels (e.g., labels.environment == "production").
  string filter = 4;
}

message ListProjectsResponse {
  // The projects from the specified request.
  repeated Project projects = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message SearchProjectsRequest {
  // Show deleted projects if specified.
  bool show_deleted = 1;

  // Filter the project.
  // The syntax and semantics of CEL are documented at https://github.com/google/cel-spec
  //
  // Supported filters:
  // - name: the project name, support "==" and ".matches()" operator.
  // - resource_id: the project id, support "==" and ".matches()" operator.
  // - exclude_default: if not include the default project, should be "true" or "false", support "==" operator.
  // - state: check the State enum for the values, support "==" operator.
  // - labels.{key}: the project label, support "==" and "in" operators.
  //
  // For example:
  // name == "project name"
  // name.matches("project name")
  // resource_id == "project id"
  // resource_id.matches("project id")
  // exclude_default == true
  // state == "DELETED"
  // labels.environment == "production"
  // labels.tier == "critical"
  // labels.environment in ["staging", "prod"]
  // You can combine filter conditions like:
  // name == "project name" && resource_id.matches("project id")
  // name.matches("project name") || resource_id == "project id"
  // labels.environment == "production" && labels.tier == "critical"
  string filter = 2;

  // The maximum number of projects to return. The service may return fewer than
  // this value.
  // If unspecified, at most 10 projects will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 3;

  // A page token, received from a previous `SearchProjects` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `SearchProjects` must match
  // the call that provided the page token.
  string page_token = 4;
}

message SearchProjectsResponse {
  // The projects from the specified request.
  repeated Project projects = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message CreateProjectRequest {
  // The project to create.
  Project project = 1 [(google.api.field_behavior) = REQUIRED];

  // The ID to use for the project, which will become the final component of
  // the project's resource name.
  //
  // This value should be 4-63 characters, and valid characters
  // are /[a-z][0-9]-/.
  string project_id = 2;
}

message UpdateProjectRequest {
  // The project to update.
  //
  // The project's `name` field is used to identify the project to update.
  // Format: projects/{project}
  Project project = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2;

  // If set to true, and the project is not found, a new project will be created.
  // In this situation, `update_mask` is ignored.
  bool allow_missing = 3;
}

message DeleteProjectRequest {
  // The name of the project to delete.
  // Format: projects/{project}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // If set to true, any databases from this project will be moved to default project.
  // Sheets are not moved since BYTEBASE_ARTIFACT sheets belong to the issue and issue project.
  // Open issues will remain open but associated with the deleted project.
  // If set to false, the operation will fail if the project has databases or open issues.
  bool force = 2;

  // If set to true, permanently purge the soft-deleted project and all related resources.
  // This operation is irreversible. Following AIP-165, this should only be used for
  // administrative cleanup of old soft-deleted projects.
  // The project must already be soft-deleted for this to work.
  bool purge = 3;
}

message UndeleteProjectRequest {
  // The name of the deleted project.
  // Format: projects/{project}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];
}

message BatchDeleteProjectsRequest {
  // The names of the projects to delete.
  // Format: projects/{project}
  repeated string names = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // If set to true, any databases from this project will be moved to default project.
  // Sheets are not moved since BYTEBASE_ARTIFACT sheets belong to the issue and issue project.
  // Open issues will remain open but associated with the deleted project.
  // If set to false, the operation will fail if the project has databases or open issues.
  bool force = 2;
}

message BatchGetIamPolicyRequest {
  // The scope of the batch get. Typically it's "projects/-".
  string scope = 1 [(google.api.field_behavior) = REQUIRED];

  repeated string names = 2;
}

message BatchGetIamPolicyResponse {
  // Result for a single project's IAM policy.
  message PolicyResult {
    // The project resource name.
    string project = 1;

    // The IAM policy for the project.
    IamPolicy policy = 2;
  }
  // The policy results for each requested project.
  repeated PolicyResult policy_results = 1;
}

// A label for categorizing and organizing issues.
message Label {
  // The label value/name.
  string value = 1;
  // The color code for the label (e.g., hex color).
  string color = 2;
  // The group this label belongs to.
  string group = 3;
}

message Project {
  option (google.api.resource) = {
    type: "bytebase.com/Project"
    pattern: "projects/{project}"
  };

  reserved 2;
  // The name of the project.
  // Format: projects/{project}
  string name = 1;

  // The lifecycle state of the project.
  State state = 3;

  // The title or name of a project. It's not unique within the workspace.
  string title = 4 [(buf.validate.field).string.max_len = 200];

  // The list of webhooks configured for the project.
  repeated Webhook webhooks = 11;

  // The data classification configuration ID for the project.
  string data_classification_config_id = 12;

  // Labels available for tagging issues in this project.
  repeated Label issue_labels = 13;

  // Force issue labels to be used when creating an issue.
  bool force_issue_labels = 14;
  // Allow modifying SQL statements after issue is created.
  bool allow_modify_statement = 15;
  // Enable automatic issue resolution when tasks complete.
  bool auto_resolve_issue = 16;
  // Enforce issue title to be created by user instead of generated by Bytebase.
  bool enforce_issue_title = 17;

  // Whether to automatically enable backup for database changes.
  bool auto_enable_backup = 18;

  // Whether to skip backup errors and continue with data migration.
  bool skip_backup_errors = 19;

  // Whether to enable database tenant mode for PostgreSQL.
  // If enabled, issues will include "set role <db_owner>" statement.
  bool postgres_database_tenant_mode = 20;

  // Whether to allow issue creators to self-approve their own issues.
  bool allow_self_approval = 21;

  // Execution retry policy for task runs.
  ExecutionRetryPolicy execution_retry_policy = 22;

  // Execution retry policy configuration.
  message ExecutionRetryPolicy {
    // The maximum number of retries for lock timeout errors.
    int32 maximum_retries = 1;
  }

  // The maximum number of database rows to sample during CI data validation.
  // Without specification, sampling is disabled, resulting in full validation.
  int32 ci_sampling_size = 23;

  // The maximum number of parallel tasks allowed during rollout execution.
  int32 parallel_tasks_per_rollout = 24;

  // Labels are key-value pairs that can be attached to the project.
  // For example, { "environment": "production", "team": "backend" }
  map<string, string> labels = 25;

  // Whether to enforce SQL review checks to pass before issue creation.
  // If enabled, issues cannot be created when SQL review finds errors.
  bool enforce_sql_review = 26;
}

message AddWebhookRequest {
  // The name of the project to add the webhook to.
  // Format: projects/{project}
  string project = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // The webhook to add.
  Webhook webhook = 2 [(google.api.field_behavior) = REQUIRED];
}

message UpdateWebhookRequest {
  // The webhook to modify.
  Webhook webhook = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2;

  // If set to true, and the webhook is not found, a new webhook will be created.
  // In this situation, `update_mask` is ignored.
  bool allow_missing = 3;
}

message RemoveWebhookRequest {
  // The webhook to remove. Identified by its url.
  Webhook webhook = 1 [(google.api.field_behavior) = REQUIRED];
}

message TestWebhookRequest {
  // The name of the project which owns the webhook to test.
  // Format: projects/{project}
  string project = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // The webhook to test. Identified by its url.
  Webhook webhook = 2 [(google.api.field_behavior) = REQUIRED];
}

message TestWebhookResponse {
  // The result of the test, empty if the test is successful.
  string error = 1;
}

message Webhook {
  option (google.api.resource) = {
    type: "bytebase.com/Webhook"
    pattern: "projects/{project}/webhooks/{webhook}"
  };

  // name is the name of the webhook, generated by the server.
  // format: projects/{project}/webhooks/{webhook}
  string name = 1;

  // Webhook integration type.
  enum Type {
    // Unspecified type.
    TYPE_UNSPECIFIED = 0;
    // Slack integration.
    SLACK = 1;
    // Discord integration.
    DISCORD = 2;
    // Microsoft Teams integration.
    TEAMS = 3;
    // DingTalk integration.
    DINGTALK = 4;
    // Feishu integration.
    FEISHU = 5;
    // WeCom (WeChat Work) integration.
    WECOM = 6;
    // Lark integration.
    LARK = 8;
  }
  // type is the type of the webhook.
  Type type = 2 [(google.api.field_behavior) = REQUIRED];

  // title is the title of the webhook.
  string title = 3 [(google.api.field_behavior) = REQUIRED];

  // url is the url of the webhook, should be unique within the project.
  string url = 4 [(google.api.field_behavior) = REQUIRED];

  // if direct_message is set, the notification is sent directly
  // to the persons and url will be ignored.
  // IM integration setting should be set for this function to work.
  bool direct_message = 6;

  // notification_types is the list of activities types that the webhook is interested in.
  // Bytebase will only send notifications to the webhook if the activity type is in the list.
  // It should not be empty, and should be a subset of the following:
  // - ISSUE_CREATE
  // - ISSUE_COMMENT_CREATE
  // - ISSUE_FIELD_UPDATE
  // - ISSUE_STATUS_UPDATE
  // - ISSUE_APPROVAL_NOTIFY
  // - ISSUE_PIPELINE_STAGE_STATUS_UPDATE
  // - ISSUE_PIPELINE_TASK_RUN_STATUS_UPDATE
  // - NOTIFY_ISSUE_APPROVED
  // - NOTIFY_PIPELINE_ROLLOUT
  repeated Activity.Type notification_types = 5 [(google.api.field_behavior) = UNORDERED_LIST];
}

// Activity types for webhook notifications.
message Activity {
  // Activity type enumeration.
  enum Type {
    // Unspecified type.
    TYPE_UNSPECIFIED = 0;
    // Notifications via webhooks.
    //
    // NOTIFY_ISSUE_APPROVED represents the issue approved notification.
    NOTIFY_ISSUE_APPROVED = 23;
    // NOTIFY_PIPELINE_ROLLOUT represents the pipeline rollout notification.
    NOTIFY_PIPELINE_ROLLOUT = 24;
    // Issue related activity types.
    //
    // ISSUE_CREATE represents creating an issue.
    ISSUE_CREATE = 1;
    // ISSUE_COMMENT_CREATE represents commenting on an issue.
    ISSUE_COMMENT_CREATE = 2;
    // ISSUE_FIELD_UPDATE represents updating the issue field, likes title, description, etc.
    ISSUE_FIELD_UPDATE = 3;
    // ISSUE_STATUS_UPDATE represents the issue status change, including OPEN, CLOSE, CANCEL fow now.
    ISSUE_STATUS_UPDATE = 4;
    // ISSUE_APPROVAL_NOTIFY is the type for notifying issue approval.
    ISSUE_APPROVAL_NOTIFY = 21;
    // ISSUE_PIPELINE_STAGE_STATUS_UPDATE represents the pipeline stage status change, including BEGIN, END for now.
    ISSUE_PIPELINE_STAGE_STATUS_UPDATE = 5;
    // ISSUE_PIPELINE_TASK_RUN_STATUS_UPDATE represents the pipeline task run status change, including PENDING, RUNNING, DONE, FAILED, CANCELED.
    ISSUE_PIPELINE_TASK_RUN_STATUS_UPDATE = 22;
  }
}
